IaC/xpipe-dev/xpipe-repos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpipe-repos
  name: xpipe-repos
  namespace: xpipe-dev
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: xpipe-repos
  sessionAffinity: None
  type: ClusterIP
