IaC/xpipe-dev/xpipe-repos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpipe-repos
  namespace: xpipe-dev
  labels:
    app: xpipe-repos
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8g"
    nginx.org/client-max-body-size: "8g"
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: dev-repos-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: xpipe-repos
              port:
                number: 3000
  tls:
  - hosts:
    - dev-repos-xpipe.sindria.org
    secretName: tls-sindriaorg
